// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Select Renderer Styles Test clear indicator 1`] = `
Object {
  ":hover": Object {
    "color": "#CEB900",
    "cursor": "pointer",
  },
  "color": "#FFEE52",
  "test": "test",
}
`;

exports[`Test Select Renderer Styles Test control is focused = false 1`] = `
Object {
  ":hover": Object {
    "cursor": "text",
  },
  ":hover, :active, :focus": Object {
    "border": "1px solid #05263B",
    "boxShadow": "0 0 0 1px #05263B",
  },
  "border": "1px solid #C7C7C7",
  "boxShadow": "none",
  "test": "test",
}
`;

exports[`Test Select Renderer Styles Test control is focused = true 1`] = `
Object {
  ":hover": Object {
    "cursor": "text",
  },
  ":hover, :active, :focus": Object {
    "border": "1px solid #05263B",
    "boxShadow": "0 0 0 1px #05263B",
  },
  "border": "1px solid #05263B",
  "boxShadow": "0 0 0 1px #05263B",
  "test": "test",
}
`;

exports[`Test Select Renderer Styles Test dropdown indicator 1`] = `
Object {
  ":hover": Object {
    "color": "#05263B",
    "cursor": "pointer",
  },
  "color": "#0B466B",
  "test": "test",
}
`;
